Fix input-click zoom on mobile by 16px font-size

--- a/imports/client/styles/_base.scss
+++ b/imports/client/styles/_base.scss
@@ -36,7 +36,7 @@ input[type="text"], input[type="textarea"], input[type="email"], input[type="pas
   color: $body-default-color;
   background-color: $input-background;
   border: 1px solid $input-border;
-  font-size: $base-font-size;
+  font-size: $input-font-size;
   font-family: $body-default-font-family;
   margin-bottom: $space;
   padding: $input-spacing;
