--- a/imports/client/styles/_variables.scss
+++ b/imports/client/styles/_variables.scss
@@ -23,9 +23,10 @@ $large-font-size: 2.2rem;
 // Form inputs
 $input-background: white;
 $input-border: $lightgrey;
+$input-font-size: 16rem;
 $input-placeholder-color: $darkgrey;
-$input-text-color: $darkergrey;
 $input-spacing: 1rem;
+$input-text-color: $darkergrey;
 
 // Boxed view
 $boxed-view-overlay-bg: $lightgrey;
